# SmartLogs

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
SmartLogs/: __init__.py  config.py  debug.py  formatter.py  logger.py
scripts/: smoke_install.sh
tests/: test_debug.py  test_formatter.py  test_logger.py
